--- a/index.html
+++ b/index.html
@@ -296,38 +296,38 @@
             <div id="movieCarousel" style="overflow: auto;" class="container-fluid movie-scroll py-2">
                 <div class="d-flex flex-row flex-nowrap ">
                     <div class=" me-4  card bg-transparent border-0" style="min-width:235px; ">
-                       <a href="moviebook.html"><img src="./media/jsk.avif" class="object-fit-cover  card-img-top" alt="..."></a>
+                       <a href="moviesbook/jskbook.html"><img src="./media/jsk.avif" class="object-fit-cover  card-img-top" alt="...">
                         <div class="card-body border-0">
                             <h5 class="text-dark fw-bold card-title">JSK-Janaki vs State of Kerala</h5>
-                            <p class="card-text">Action/Drama/Thriller</p>
+                            <p class="card-text">Action/Drama/Thriller</p></a>
                         </div>
                     </div>
-                    <div class=" me-4 card bg-transparent border-0" style="min-width:235px;">
+                    <a href="moviesbook/saiyaarabook.html"><div class=" me-4 card bg-transparent border-0" style="min-width:235px;">
                         <img src="./media/saiyaara.avif" class="object-fit-cover  card-img-top" alt="...">
                         <div class="card-body border-0">
                             <h5 class="card-title text-dark fw-bold">Saiyaara</h5>
-                            <p class="card-text">Action/Drama/Thriller</p>
+                            <p class="card-text">Action/Drama/Thriller</p></a>
                         </div>
                     </div>
                     <div class="me-4 card bg-transparent border-0" style="min-width:235px;">
-                        <img src="./media/superman.avif" class="object-fit-cover card-img-top" alt="...">
+                        <a href="moviesbook/thalavibook.html"><img src="./media/superman.avif" class="object-fit-cover card-img-top" alt="...">
                         <div class="card-body border-0">
                             <h5 class="card-title text-dark fw-bold">Superman</h5>
-                            <p class="card-text">Romantic/Drama/Musical</p>
+                            <p class="card-text">Romantic/Drama/Musical</p></a>
                         </div>
                     </div>
-                    <div class="me-4 card bg-transparent border-0" style="min-width:235px;">
+                    <a href="moviesbook/maareesanbook.html"> <div class="me-4 card bg-transparent border-0" style="min-width:235px;">
                         <img src="./media/maareesan.avif" class="object-fit-cover card-img-top" alt="...">
                         <div class="card-body border-0">
                             <h5 class="card-title text-dark fw-bold">Maareesan</h5>
-                            <p class="card-text">Action/Adventure/Sci-Fi</p>
+                            <p class="card-text">Action/Adventure/Sci-Fi</p></a>
                         </div>
                     </div>
                     <div class="me-4 card bg-transparent border-0" style="min-width:235px;">
-                        <img src="./media/thalaivan thalaivii.avif" class="object-fit-cover card-img-top" alt="...">
+                     <a href="moviesbook/thalavibook.html"><img src="./media/thalaivan thalaivii.avif" class="object-fit-cover card-img-top" alt="...">
                         <div class="card-body border-0">
                             <h5 class="card-title text-dark fw-bold">Thalaivan Thalaivii</h5>
-                            <p class="card-text">Comedy/Drama/Romantic</p>
+                            <p class="card-text">Comedy/Drama/Romantic</p></a>
                         </div>
                     </div>
                     <div class="me-4 card bg-transparent border-0" style="min-width:235px;">
