--- a/moviesbook/jskbook.html
+++ b/moviesbook/jskbook.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>MY</title>
-    <link rel="stylesheet" href="style.css">
+    <title>BookMyShow Clone</title>
+    <link rel="stylesheet" href="../style.css">
     <link rel="shortcut icon"
-        href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSR9tv72APr1TsBcpMDia94JLwveHQyr-qXoA&s"
+        href="../media/fav.png"
         type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
@@ -35,7 +35,7 @@
                 </button>
                 <div class="d-flex align-items-center gap-3">
                     <a id="logo" class="navbar-brand order-1 order-lg-0 text-dark ms-md-5 me-md-0 me-5  mx-auto d-block"
-                        href="#intro"><img src="./media/real logo.svg" width="110px" alt=""></a>
+                        href="#intro"><img src="../media/real logo.svg" width="110px" alt=""></a>
                     <form class=" d-none d-md-flex " style="position: relative;" role="search">
                         <i class="fa-solid fa-magnifying-glass"
                             style="position:relative; left: 25px; top: 10px; color: #2b3148 "></i>
@@ -141,7 +141,7 @@
             <br>
             <div style="margin-top: -40px;" class="offcanvas-body ">
                 <div class="d-flex justify-content-between align-items-center mb-3">
-                    <img src="./media/rewards.webp" alt="">
+                    <img src="../media/rewards.webp" alt="">
                     <span class=" ms-3">Unlock special offers & great benefits</span>
                     <button style="width: 130px; height: 50px;" class="btn ms-1 btn-outline-danger btn-sm">Login /
                         Register</button>
@@ -263,7 +263,7 @@
         <div class="clr  ">
             <section id="mla" class="d-flex gap-5 my-3 p-5 ms-5 pt-5">
                 <div>
-                    <img src="./media/jskposter.avif" width="280px" class="poster-img" alt="JSK Poster">
+                    <img src="../media/jskposter.avif" width="280px" class="poster-img" alt="JSK Poster">
                     <!-- <div class="trailer-tag">▶ Trailer</div> -->
                 </div>
                 <div class="mt-4">
@@ -313,7 +313,7 @@
             <div class="d-flex flex-row flex-nowrap gap-4">
 
                 <div class="card bg-transparent border-0 text-center" style="min-width: 120px;">
-                    <img src="./media/suresh-gopi-2302-24-03-2017-12-34-50.avif" width="120" height="120"
+                    <img src="../media/suresh-gopi-2302-24-03-2017-12-34-50.avif" width="120" height="120"
                         class="rounded-circle object-fit-cover mx-auto" alt="Suresh Gopi">
                     <div class="card-body p-0 mt-2">
                         <h6 class="text-dark fw-bold mb-0">Suresh Gopi</h6>
@@ -322,7 +322,7 @@
                 </div>
 
                 <div class="card bg-transparent border-0 text-center" style="min-width: 120px;">
-                    <img src="./media/anupama-parameswaran-1063607-1670497994.avif" width="120" height="120"
+                    <img src="../media/anupama-parameswaran-1063607-1670497994.avif" width="120" height="120"
                         class="rounded-circle object-fit-cover mx-auto" alt="Anupama">
                     <div class="card-body p-0 mt-2">
                         <h6 class="text-dark fw-bold mb-0">Anupama Parameswaran</h6>
@@ -332,7 +332,7 @@
 
 
                 <div class="card bg-transparent border-0 text-center" style="min-width: 120px;">
-                    <img src="./media/madhav-suresh-gopi-2048700-1751008686.avif" width="120" height="120"
+                    <img src="../media/madhav-suresh-gopi-2048700-1751008686.avif" width="120" height="120"
                         class="rounded-circle object-fit-cover mx-auto" alt="Divya">
                     <div class="card-body p-0 mt-2">
                         <h6 class="text-dark fw-bold mb-0">Madhav Suresh Gopi</h6>
@@ -340,7 +340,7 @@
                     </div>
                 </div>
                 <div class="card bg-transparent border-0 text-center" style="min-width: 120px;">
-                    <img src="./media/divya-pillai-1072187-1670589807.avif" width="120" height="120"
+                    <img src="../media/divya-pillai-1072187-1670589807.avif" width="120" height="120"
                         class="rounded-circle object-fit-cover mx-auto" alt="Divya">
                     <div class="card-body p-0 mt-2">
                         <h6 class="text-dark fw-bold mb-0">Divya Pillai</h6>
@@ -350,7 +350,7 @@
 
 
                 <div class="card bg-transparent border-0 text-center" style="min-width: 120px;">
-                    <img src="./media/shruti-ramachandran-1095598-20-09-2018-02-58-49.avif" width="120" height="120"
+                    <img src="../media/shruti-ramachandran-1095598-20-09-2018-02-58-49.avif" width="120" height="120"
                         class="rounded-circle object-fit-cover mx-auto" alt="Shruti">
                     <div class="card-body p-0 mt-2">
                         <h6 class="text-dark fw-bold mb-0">Shruti Ramachandran</h6>
@@ -360,7 +360,7 @@
 
 
                 <div class="card bg-transparent border-0 text-center" style="min-width: 120px;">
-                    <img src="./media/baiju-santhosh-1267178-09-05-2019-11-23-06.avif" width="120" height="120"
+                    <img src="../media/baiju-santhosh-1267178-09-05-2019-11-23-06.avif" width="120" height="120"
                         class="rounded-circle object-fit-cover mx-auto" alt="Baiju">
                     <div class="card-body p-0 mt-2">
                         <h6 class="text-dark fw-bold mb-0">Baiju Santhosh</h6>
@@ -386,7 +386,7 @@
             <div class="d-flex flex-row flex-nowrap gap-4">
 
                 <div class="card bg-transparent border-0 text-center" style="min-width: 120px;">
-                    <img src="./media/praveen-narayanan-1090470-1750419836.avif" width="120" height="120"
+                    <img src="../media/praveen-narayanan-1090470-1750419836.avif" width="120" height="120"
                         class="rounded-circle object-fit-cover mx-auto" alt="Suresh Gopi">
                     <div class="card-body p-0 mt-2">
                         <h6 class="text-dark fw-bold mb-0">Pravin Narayanan</h6>
@@ -395,7 +395,7 @@
                 </div>
 
                 <div class="card bg-transparent border-0 text-center" style="min-width: 120px;">
-                    <img src="./media/jasthi-phanindra-kumar-2048504-1750342766.avif" width="120" height="120"
+                    <img src="../media/jasthi-phanindra-kumar-2048504-1750342766.avif" width="120" height="120"
                         class="rounded-circle object-fit-cover mx-auto" alt="Anupama">
                     <div class="card-body p-0 mt-2">
                         <h6 class="text-dark fw-bold mb-0">Jasthi Phanindra Kumar</h6>
@@ -405,7 +405,7 @@
 
 
                 <div class="card bg-transparent border-0 text-center" style="min-width: 120px;">
-                    <img src="./media/girish-narayanan-2022408-1663936128.avif" width="120" height="120"
+                    <img src="../media/girish-narayanan-2022408-1663936128.avif" width="120" height="120"
                         class="rounded-circle object-fit-cover mx-auto" alt="Divya">
                     <div class="card-body p-0 mt-2">
                         <h6 class="text-dark fw-bold mb-0">Girish Narayanan</h6>
@@ -415,7 +415,7 @@
 
 
                 <div class="card bg-transparent border-0 text-center" style="min-width: 120px;">
-                    <img src="./media/renadive-1264375-10-01-2019-04-14-28.avif" width="120" height="120"
+                    <img src="../media/renadive-1264375-10-01-2019-04-14-28.avif" width="120" height="120"
                         class="rounded-circle object-fit-cover mx-auto" alt="Shruti">
                     <div class="card-body p-0 mt-2">
                         <h6 class="text-dark fw-bold mb-0">Renadive</h6>
@@ -425,7 +425,7 @@
 
 
                 <div class="card bg-transparent border-0 text-center" style="min-width: 120px;">
-                    <img src="./media/samjith-mohammed-iein113079-27-03-2019-12-11-06.avif" width="120" height="120"
+                    <img src="../media/samjith-mohammed-iein113079-27-03-2019-12-11-06.avif" width="120" height="120"
                         class="rounded-circle object-fit-cover mx-auto" alt="Baiju">
                     <div class="card-body p-0 mt-2">
                         <h6 class="text-dark fw-bold mb-0">Samjith Mohammed</h6>
@@ -433,7 +433,7 @@
                     </div>
                 </div>
                 <div class="card bg-transparent border-0 text-center" style="min-width: 120px;">
-                    <img src="./media/ghibran-1057249-1749549646.avif" width="120" height="120"
+                    <img src="../media/ghibran-1057249-1749549646.avif" width="120" height="120"
                         class="rounded-circle object-fit-cover mx-auto" alt="Baiju">
                     <div class="card-body p-0 mt-2">
                         <h6 class="text-dark fw-bold mb-0">Ghibran</h6>
@@ -454,67 +454,67 @@
             <div class="d-flex flex-row ms-1 flex-nowrap ">
 
                 <div class=" me-4 card bg-transparent border-0" style="min-width:200px;">
-                    <img src="./media/saiyaara.avif" class="object-fit-cover  card-img-top" alt="...">
+                    <img src="../media/saiyaara.avif" class="object-fit-cover  card-img-top" alt="...">
                     <div class="card-body border-0">
                         <h5 class="card-title text-dark fw-bold">Saiyaara</h5>
                     </div>
                 </div>
                 <div class="me-4 card bg-transparent border-0" style="min-width:200px;">
-                    <img src="./media/superman.avif" class="object-fit-cover card-img-top" alt="...">
+                    <img src="../media/superman.avif" class="object-fit-cover card-img-top" alt="...">
                     <div class="card-body border-0">
                         <h5 class="card-title text-dark fw-bold">Superman</h5>
                     </div>
                 </div>
                 <div class="me-4 card bg-transparent border-0" style="min-width:200px;">
-                    <img src="./media/maareesan.avif" class="object-fit-cover card-img-top" alt="...">
+                    <img src="../media/maareesan.avif" class="object-fit-cover card-img-top" alt="...">
                     <div class="card-body border-0">
                         <h5 class="card-title text-dark fw-bold">Maareesan</h5>
                     </div>
                 </div>
                 <div class="me-4 card bg-transparent border-0" style="min-width:200px;">
-                    <img src="./media/thalaivan thalaivii.avif" class="object-fit-cover card-img-top" alt="...">
+                    <img src="../media/thalaivan thalaivii.avif" class="object-fit-cover card-img-top" alt="...">
                     <div class="card-body border-0">
                         <h5 class="card-title text-dark fw-bold">Thalaivan Thalaivii</h5>
                     </div>
                 </div>
                 <div class="me-4 card bg-transparent border-0" style="min-width:200px;">
-                    <img src="./media/f1.avif" class="object-fit-cover  height=" 100%" alt="...">
+                    <img src="../media/f1.avif" class="object-fit-cover  height=" 100%" alt="...">
                     <div class="card-body border-0">
                         <h5 class="card-title text-dark fw-bold">F1: The Movie</h5>
                     </div>
                 </div>
                 <div class="me-4 card bg-transparent border-0" style="min-width:200px;">
-                    <img src="./media/fasntastic.avif" class="object-fit-cover card-img-top" alt="...">
+                    <img src="../media/fasntastic.avif" class="object-fit-cover card-img-top" alt="...">
                     <div class=" ms-1 me-4 card-body border-0">
                         <h5 class="card-title text-dark fw-bold">The Fantastic Four: First Steps</h5>
                     </div>
                 </div>
                 <div class="me-4 card  bg-transparent  border-0" style="min-width:200px;">
-                    <img src="./media/jurassic.avif" class="object-fit-cover card-img-top" alt="...">
+                    <img src="../media/jurassic.avif" class="object-fit-cover card-img-top" alt="...">
                     <div class="card-body border-0">
                         <h5 class="card-title text-dark fw-bold">Jurassic World: Rebirth</h5>
                     </div>
                 </div>
                 <div class="me-4 card bg-transparent  border-0" style="min-width:200px;">
-                    <img src="./media/apoorva.avif" class="object-fit-cover card-img-top" alt="...">
+                    <img src="../media/apoorva.avif" class="object-fit-cover card-img-top" alt="...">
                     <div class="card-body border-0">
                         <h5 class="card-title text-dark fw-bold">Apoorva Puthranmaar</h5>
                     </div>
                 </div>
                 <div class="me-4 card bg-transparent  border-0" style="min-width:200px;">
-                    <img src="./media/raveendra.avif" class="object-fit-cover card-img-top" alt="...">
+                    <img src="../media/raveendra.avif" class="object-fit-cover card-img-top" alt="...">
                     <div class="card-body border-0">
                         <h5 class="card-title text-dark fw-bold">Raveendra Nee Evide</h5>
                     </div>
                 </div>
                 <div class="me-4 card bg-transparent  border-0" style="min-width:200px;">
-                    <img src="./media/flask.avif" class="object-fit-cover card-img-top" alt="...">
+                    <img src="../media/flask.avif" class="object-fit-cover card-img-top" alt="...">
                     <div class="card-body border-0">
                         <h5 class="card-title">Flask</h5>
                     </div>
                 </div>
                 <div class=" card  bg-transparent  border-0" style="min-width:200px;">
-                    <img src="./media/hari hara.avif" class="object-fit-cover card-img-top" alt="...">
+                    <img src="../media/hari hara.avif" class="object-fit-cover card-img-top" alt="...">
                     <div class="card-body border-0">
                         <h5 class="card-title text-dark fw-bold">Hari Hara Veera Mallu - Part 1 Sword vs Spirit</h5>
                     </div>
@@ -587,7 +587,7 @@
         <div class="py-5  ">
             <div class="row mx-5 align-items-center gy-3">
                 <div class="col-lg-9  d-flex flex-wrap align-items-center">
-                    <img src="./media/hut.svg" alt="icon" class="me-3 mb-2" width="40">
+                    <img src="../media/hut.svg" alt="icon" class="me-3 mb-2" width="40">
                     <div>
                         <h1 class="mb-1" style="font-size: 18px; font-weight: 800;">List your Show</h1>
                         <h1 class="mb-0" style="font-size: 16px;">
@@ -607,7 +607,7 @@
             <div class="row text-center mt-5 mb-5 py-4" style="background-color: #626263; border-radius: 8px;">
                 <div class="col-12 col-sm-4 mb-3 mb-sm-0">
                     <a href="https://support.bookmyshow.com/support/home?regionCode=NCR"><img
-                            src="./media/customer-care.png" width="65" alt="Customer Care"></a>
+                            src="../media/customer-care.png" width="65" alt="Customer Care"></a>
                     <div class="mt-2">
                         <small class="text-white fw-semibold">24/7 CUSTOMER CARE</small>
                     </div>
@@ -615,14 +615,14 @@
                 </div>
 
                 <div class="col-12 col-sm-4 mb-3 mb-sm-0">
-                    <img src="./media/movies.png" width="65" alt="Resend Booking">
+                    <img src="../media/movies.png" width="65" alt="Resend Booking">
                     <div class="mt-2">
                         <small class="text-white fw-semibold">RESEND BOOKING CONFIRMATION</small>
                     </div>
                 </div>
 
                 <div class="col-12 col-sm-4">
-                    <img src="./media/newsletter (1).png" width="65" alt="Newsletter">
+                    <img src="../media/newsletter (1).png" width="65" alt="Newsletter">
                     <div class="mt-2">
                         <small class="text-white fw-semibold">SUBSCRIBE TO THE NEWSLETTER</small>
                     </div>
@@ -631,7 +631,7 @@
 
             <div id="elogo" class="my-5 ">
                 <span>_________________________________________________________________________________________</span><img
-                    src="./media/logo.png" width="200px" height="50px" class="mt-3"
+                    src="../media/logo.png" width="200px" height="50px" class="mt-3"
                     alt=""><span>____________________________________________________________________________________</span>
             </div>
             <div class="icons  d-flex justify-content-center my-4 gap-3">
