--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                         </div>
                     </div>
                     <div class="me-4 card bg-transparent border-0" style="min-width:235px;">
-                        <a href="moviesbook/thalavibook.html"><img src="./media/superman.avif" class="object-fit-cover card-img-top" alt="...">
+                        <a href="moviesbook/supermanbook.html"><img src="./media/superman.avif" class="object-fit-cover card-img-top" alt="...">
                         <div class="card-body border-0">
                             <h5 class="card-title text-dark fw-bold">Superman</h5>
                             <p class="card-text">Romantic/Drama/Musical</p></a>
